[gd_scene load_steps=21 format=2]

[ext_resource path="res://assets/boing.wav" type="AudioStream" id=1]
[ext_resource path="res://assets/cat.png" type="Texture" id=2]
[ext_resource path="res://src/Actors/Player.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 256, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 512, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 768, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 256, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 512, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 768, 256, 256, 256 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 4 ), SubResource( 3 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 96, 104 )

[sub_resource type="Animation" id=11]
resource_name = "Idle"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "idle" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=12]
resource_name = "Jump"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "jump" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=13]
resource_name = "Teleport"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.378929, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.466517, 1 ),
"update": 0,
"values": [ 0.0, 900.0 ]
}

[sub_resource type="Animation" id=14]
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "walk" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 2, 1 ]
}

[sub_resource type="Animation" id=15]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 5.65686, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 2, 2 ) ]
}

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 48, 8 )

[sub_resource type="CircleShape2D" id=17]
radius = 32.0

[node name="Player" type="KinematicBody2D"]
collision_mask = 6
script = ExtResource( 3 )
speed = Vector2( 300, 400 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -128 )
frames = SubResource( 9 )
animation = "jump"
speed_scale = 2.0

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -128 )
current = true
limit_left = 0
limit_bottom = 768
drag_margin_left = 1.0
drag_margin_right = 1.0
drag_margin_bottom = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 24, -96 )
rotation = 1.5708
shape = SubResource( 10 )

[node name="PlayerAnimations" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 11 )
anims/Jump = SubResource( 12 )
anims/Teleport = SubResource( 13 )
anims/Walk = SubResource( 14 )

[node name="CameraAnimations" type="AnimationPlayer" parent="."]
anims/Zoom = SubResource( 15 )

[node name="TrampolineDetector" type="Area2D" parent="."]
monitorable = false
collision_mask = 2

[node name="CollisionShapeD2" type="CollisionShape2D" parent="TrampolineDetector"]
position = Vector2( 24, -8 )
shape = SubResource( 16 )

[node name="BoingSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )

[node name="PortalDetector" type="Area2D" parent="."]
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="PortalDetector"]
position = Vector2( 24, -96 )
shape = SubResource( 17 )
[connection signal="area_shape_entered" from="TrampolineDetector" to="." method="_on_TrampolineDetector_area_shape_entered"]
[connection signal="area_shape_entered" from="PortalDetector" to="." method="_on_PortalDetector_area_shape_entered"]
